force-app/main/default/objects/Return_Item__c/Return_Item__c.object-meta.xml
<CustomObject>
    <label>Return Item</label>
    <nameField>
        <displayFormat>RItem-{0000}</displayFormat>
        <label>Return Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>