force-app/main/default/objects/Return_Item__c/fields/Customer_Type_formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_formula__c</fullName>
    <formula>Text(Return__r.Customer__r.Customer_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type formula</label>
    <type>Text</type>
</CustomField>