force-app/main/default/objects/Return_Item__c/fields/Distributor_Stock__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Stock__c</fullName>
    <label>Distributor Stock</label>
    <referenceTo>Distributor_Stock__c</referenceTo>
    <relationshipLabel>Return Items</relationshipLabel>
    <relationshipName>Return_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>