force-app/main/default/objects/Return_Item__c/fields/DistributorId__c.field-meta.xml
<CustomField>
    <fullName>DistributorId__c</fullName>
    <formula>IF( Customer_Type_formula__c ==&apos;Primary Customer&apos;,CASESAFEID(Return__r.Customer__c), CASESAFEID(Return__r.Distributor__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DistributorId</label>
    <type>Text</type>
</CustomField>