force-app/main/default/objects/Return_Item__c/fields/Nonsaleable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Nonsaleable_Quantity__c</fullName>
    <label>Nonsaleable Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>