force-app/main/default/objects/Return_Item__c/fields/Reason_For_Return__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Return__c</fullName>
    <label>Reason For Return</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_For_Return</valueSetName>
    </valueSet>
</CustomField>