force-app/main/default/objects/Return_Item__c/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return</label>
    <referenceTo>Return__c</referenceTo>
    <relationshipLabel>Return Items</relationshipLabel>
    <relationshipName>Return_Items</relationshipName>
    <type>Lookup</type>
</CustomField>