force-app/main/default/objects/Return_Item__c/fields/Saleable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Quantity__c</fullName>
    <label>Saleable Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>