force-app/main/default/objects/Return_Item__c/fields/SKU_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>SKU_Name_Formula__c</fullName>
    <formula>SKU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU Name Formula</label>
    <type>Text</type>
</CustomField>